--- a/less_4_/task3/package.json
+++ b/less_4_/task3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solution",
+  "name": "task_5",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,27 +11,34 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.15.8",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.3.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
     "html-webpack-plugin": "^5.3.2",
-    "moment": "^2.29.4",
-    "sass": "^1.55.0",
-    "sass-loader": "^13.1.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.58.1",
-    "webpack-cli": "^4.9.0",
+    "mini-css-extract-plugin": "^2.3.0",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.56.1",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
-    "core-js": "^3.18.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "core-js": "^3.18.1",
+    "moment": "^2.29.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   }
 }
