--- a/less_5/task2/package.json
+++ b/less_5/task2/package.json
@@ -32,6 +32,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "reselect": "^4.1.7"
   }
 }
